; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/common/ms_sensors/extr_ms_sensors_i2c.c_ms_sensors_ht_read_temperature.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/common/ms_sensors/extr_ms_sensors_i2c.c_ms_sensors_ht_read_temperature.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ms_ht_dev = type { i64, %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@ms_sensors_ht_t_conversion_time = common dso_local global i32* null, align 8
@MS_SENSORS_HT_T_CONVERSION_START = common dso_local global i32 0, align 4
@MS_SENSORS_NO_READ_CMD = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"Temperature read crc check error\0A\00", align 1
@ENODEV = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ms_sensors_ht_read_temperature(%struct.ms_ht_dev* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ms_ht_dev*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.ms_ht_dev* %0, %struct.ms_ht_dev** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load %struct.ms_ht_dev*, %struct.ms_ht_dev** %4, align 8
  %10 = getelementptr inbounds %struct.ms_ht_dev, %struct.ms_ht_dev* %9, i32 0, i32 2
  %11 = call i32 @mutex_lock(i32* %10)
  %12 = load i32*, i32** @ms_sensors_ht_t_conversion_time, align 8
  %13 = load %struct.ms_ht_dev*, %struct.ms_ht_dev** %4, align 8
  %14 = getelementptr inbounds %struct.ms_ht_dev, %struct.ms_ht_dev* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = getelementptr inbounds i32, i32* %12, i64 %15
  %17 = load i32, i32* %16, align 4
  store i32 %17, i32* %8, align 4
  %18 = load %struct.ms_ht_dev*, %struct.ms_ht_dev** %4, align 8
  %19 = getelementptr inbounds %struct.ms_ht_dev, %struct.ms_ht_dev* %18, i32 0, i32 1
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = load i32, i32* @MS_SENSORS_HT_T_CONVERSION_START, align 4
  %22 = load i32, i32* @MS_SENSORS_NO_READ_CMD, align 4
  %23 = load i32, i32* %8, align 4
  %24 = call i32 @ms_sensors_convert_and_read(%struct.TYPE_2__* %20, i32 %21, i32 %22, i32 %23, i32* %7)
  store i32 %24, i32* %6, align 4
  %25 = load %struct.ms_ht_dev*, %struct.ms_ht_dev** %4, align 8
  %26 = getelementptr inbounds %struct.ms_ht_dev, %struct.ms_ht_dev* %25, i32 0, i32 2
  %27 = call i32 @mutex_unlock(i32* %26)
  %28 = load i32, i32* %6, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %2
  %31 = load i32, i32* %6, align 4
  store i32 %31, i32* %3, align 4
  br label %51

32:                                               ; preds = %2
  %33 = load i32, i32* %7, align 4
  %34 = call i32 @ms_sensors_crc_valid(i32 %33)
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %44, label %36

36:                                               ; preds = %32
  %37 = load %struct.ms_ht_dev*, %struct.ms_ht_dev** %4, align 8
  %38 = getelementptr inbounds %struct.ms_ht_dev, %struct.ms_ht_dev* %37, i32 0, i32 1
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 0
  %41 = call i32 @dev_err(i32* %40, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  %42 = load i32, i32* @ENODEV, align 4
  %43 = sub nsw i32 0, %42
  store i32 %43, i32* %3, align 4
  br label %51

44:                                               ; preds = %32
  %45 = load i32, i32* %7, align 4
  %46 = ashr i32 %45, 8
  %47 = mul nsw i32 %46, 175720
  %48 = ashr i32 %47, 16
  %49 = sub nsw i32 %48, 46850
  %50 = load i32*, i32** %5, align 8
  store i32 %49, i32* %50, align 4
  store i32 0, i32* %3, align 4
  br label %51

51:                                               ; preds = %44, %36, %30
  %52 = load i32, i32* %3, align 4
  ret i32 %52
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @ms_sensors_convert_and_read(%struct.TYPE_2__*, i32, i32, i32, i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @ms_sensors_crc_valid(i32) #1

declare dso_local i32 @dev_err(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
